istio_ingress/templates/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: web-gateway
  namespace: istio-ingress
spec:
  selector:
    app: istio-ingress
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.beantownpub.com"
    - "*.dev.beantownpub.com"
    - "thehubpub.com"
    - "www.thehubpub.com"
    - "drdavisicecream.com"
    - "www.drdavisicecream.com"
    - "wavelengths-brookline.com"
    - "www.wavelengths-brookline.com"
    - "*.jalgraves.com"
