istio_ingress/templates/hubble-ui-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hubble
spec:
  hosts:
  - "hubble.prod.beantownpub.com"

  gateways:
  - istio-ingress/web-gateway
  - mesh # applies to all the sidecars in the mesh
  http:
  - route:
    - destination:
        port:
          number: 80
        host: "hubble-ui.kube-system.svc.cluster.local"
